346878 Leaking menu items and toplevel windows due to differences between trunk and branch APIs after bug 344238.  r=josh sr=darin a/1.8.1=schrep